refactor: migration of project in root folder + rename of authentification app in authentication.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-/epic_events/authentification/migrations/
+/authentication/migrations/
+/epicevents/static/
+/sales/migrations/
+/support/migrations/
+/static/
